# barodrop

./: BOM.csv  BOM.ods  README.md  barodrop-firmware  barodrop.20260402-104741.FCBak  barodrop.20260413-145121.FCBak  barodrop.FCStd  code.py
STEP/: barodrop-Battery_Holder.step  barodrop-Enclosure_Bottom.step  barodrop-Enclosure_Side.step  barodrop-Enclosure_Top.step  barodrop-Flyaway.step
STL/: barodrop-Battery_Holder.stl  barodrop-Enclosure_Bottom.stl  barodrop-Enclosure_Side.stl  barodrop-Enclosure_Top.stl  barodrop-Flyaway.stl
firmware/: Cargo.toml  memory.x
firmware/.cargo/: config.toml
firmware/src/: main.rs
