[package]
name = "barodrop-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bmp390-rs = "0.4.0"
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.10.0", features = ["executor-thread", "platform-cortex-m"] }
embassy-rp = { version = "0.10.0", features = ["rp2040", "time-driver", "critical-section-impl"] }
embassy-time = "0.5.1"
embassy-usb-logger = "0.6.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-io-async = "0.7.0"
libm = "0.2.16"
log = "0.4.29"
panic-halt = "1.0.0"

rp-servo = { path = "../rp-servo" }
sd-fat = { path = "../sd-fat" }
